example/secondfile/objects/DHStatus_Update_IDH__c.object
<CustomObject>
    <fields>
        <fullName>AT_T_Circuit_ID__c</fullName>
        <formula>IF(AND(Data_Type__c==&apos;Port&apos;, USO_Number__c ==  USO_for_PORT__c ) , Access_Circuit_ID__c , NULL)</formula>
        <label>AT&amp;T Circuit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Circuit_ID__c</fullName>
        <label>Access Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_in_Effect_Date__c</fullName>
        <label>Access in Effect Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Facility_Assignment_TimeReceived__c</fullName>
        <label>Circuit Facility Assignment Received?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_In_Effect_Date__c</fullName>
        <label>Circuit In Effect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <label>DHStatus-Update Deal Hash Details</label>
        <referenceTo>DHStatus_Update_Deal_Hash_Details__c</referenceTo>
        <relationshipLabel>DHStatus – Update IDHs</relationshipLabel>
        <relationshipName>DHStatus_Update_IDHs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demarc_Location2__c</fullName>
        <label>Demarc Location2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demarc_Location__c</fullName>
        <label>Demarc Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVC_PON__c</fullName>
        <label>EVC/VLAN PON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Access_Date_EVC_PON__c</fullName>
        <label>EAD (EVC PON)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Access_Date_UNI_PON__c</fullName>
        <label>EAD (UNI PON)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_FOC_Date_EVC_PON__c</fullName>
        <label>Expected FOC Date(EVC PON)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_FOC_Date_UNI_PON__c</fullName>
        <label>Expected FOC Date (UNI PON)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOC_Date_Changed_EVC_PON__c</fullName>
        <label>FOC Date Changed? (EVC PON)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOC_Received_Date_EVC_PON__c</fullName>
        <label>FOC Received Date (EVC PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_Received_Date_UNI_PON__c</fullName>
        <label>FOC Received Date(UNI PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_date_Changed__c</fullName>
        <label>FOC date Changed?(UNI PON)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_in_Effect_Date__c</fullName>
        <label>Facility in Effect Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Accepted_EVC_PON__c</fullName>
        <label>Firm Order Accepted (EVC PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Accepted_UNI_PON__c</fullName>
        <label>Firm Order Accepted (UNI PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Sent_EVC_PON__c</fullName>
        <label>Firm Order Sent (EVC PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Sent_UNI_PON__c</fullName>
        <label>Firm Order Sent (UNI PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Deal_Hash_Number__c</fullName>
        <label>Deal Hash ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <label>Premise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupPortID__c</fullName>
        <label>GroupPortID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEC_Circuit_ID__c</fullName>
        <label>LEC Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Time_Stamp__c</fullName>
        <label>Last Updated Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTA_Received__c</fullName>
        <label>PTA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortID__c</fullName>
        <label>PortID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R84_Date_Received_EVC_PON__c</fullName>
        <label>R84 Date Received (EVC PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R84_Date_Received_UNI_PON__c</fullName>
        <label>R84 Date Received (UNI PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Version__c</fullName>
        <label>RDS Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_and_Turn_Up__c</fullName>
        <label>Test and Turn Up Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <label>Transport Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNI_PON__c</fullName>
        <label>UNI PON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_for_EVC_VLAN__c</fullName>
        <formula>IF(Data_Type__c==&apos;Vlan&apos;,USO_Number__c,NULL)</formula>
        <label>USO for EVC/VLAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_for_PORT__c</fullName>
        <formula>IF(Data_Type__c==&apos;Port&apos;, USO_Number__c,NULL)</formula>
        <label>USO for PORT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLANID__c</fullName>
        <label>VLANID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_ID_Ethernet_Only__c</fullName>
        <formula>IF(Data_Type__c==&apos;Vlan&apos;,VLANID__c,NULL)</formula>
        <label>VLAN ID(Ethernet Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V4_CER_IP_Address__c</fullName>
        <label>VLAN V4 CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V4_LAN_Address_Mask__c</fullName>
        <label>VLAN V4 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V4_LAN_IP_Address__c</fullName>
        <label>VLAN V4 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V4_PER_IP_Address__c</fullName>
        <label>VLAN V4 PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V4_WAN_Address_Mask__c</fullName>
        <label>VLAN V4 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V4_WAN_IP_Address__c</fullName>
        <label>VLAN V4 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V6_CER_IP_Address__c</fullName>
        <label>VLAN V6 CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V6_LAN_Address_Mask__c</fullName>
        <label>VLAN V6 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V6_LAN_IP_Address__c</fullName>
        <label>VLAN V6 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V6_PER_IP_Address__c</fullName>
        <label>VLAN V6 PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V6_WAN_Address_Mask__c</fullName>
        <label>VLAN V6 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_V6_WAN_IP_Address__c</fullName>
        <label>VLAN V6 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus – Update IDH</label>
    <nameField>
        <displayFormat>DH-IDH-{000000}</displayFormat>
        <label>DHStatus – Update IDH  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus – Update IDHs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>